--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-tabs": "^3.0.0",
     "react-toastify": "^4.5.2",
     "rl-react-helmet": "^5.2.0",
     "styled-components": "^4.1.3",
