--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prismagram-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://naveropenapi.apigw.ntruss.com", 
   "dependencies": {
     "apollo-boost": "^0.3.1",
     "axios": "^0.19.0",
